# extension-manager

./: README.md  extension-manager.spec  meson.build  meson_options.txt
.copr/: Makefile
src/: meson.build
