option('development',
	type: 'boolean',
	value: false,
	description: 'Produce a development build')

option('official',
	type: 'boolean',
	value: false,
	description: 'Whether this is an official upstream package')

option('backtrace',
    type: 'boolean',
    value: true,
    description: 'Whether the package is built with backtrace support')

# Will be shown in error messages
option('package',
	type: 'string',
	value: 'RPM',
	description: 'The package format being built (e.g. "Flatpak")')

option('distributor',
	type: 'string',
	value: 'Vani1-2 <giovannirafanan609@gmail.com',
	description: 'The package distributor (e.g. "Your Name <optional email>")')
